# MatterDashboard

./: .gitignore  Makefile  README.md  package-lock.json  package.json  smoke-test.js  test_recipes.js  tsconfig.json  tsconfig.main.json
.github/workflows/: ci.yml  release.yml
assets/: icon.icns
native/daemon/: CMakeLists.txt
native/daemon/src/: brightness_controller.cpp  brightness_controller.hpp  daemon_types.hpp  main.cpp  matter_chip_process_runtime.cpp  matter_runtime.hpp  matter_runtime_factory.cpp  matter_worker_runtime.cpp  mini_json.hpp  volume_controller.cpp  volume_controller.hpp
patches/connectedhomeip/: matterkiosk-bridge.patch
scripts/: build-native.mjs
src/main/: app-paths.ts  brightness-control.ts  daemon-client.ts  daemon-manager.ts  daemon.ts  dashboard-runtime.ts  electron-crypto-compat.ts  execution-mode.ts  index.ts  ipc.ts  matter-controller.ts  matter-worker.ts  matter.ts  power-management.ts  store.ts  trmnl-import.ts  trmnl-transform-runner.ts  windows.ts
src/preload/: index.ts
src/renderer/: App.css  App.tsx  global.d.ts  index.html  main.tsx  styles.css
src/renderer/components/: TargetModal.css  TargetModal.tsx
src/renderer/pages/: PairingPage.css  PairingPage.tsx  SettingsPage.tsx  TargetsPage.css  TargetsPage.tsx
src/shared/: daemon-contract.ts  types.ts
